--- a/package.json
+++ b/package.json
@@ -12,17 +12,26 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.0-rc.1",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.0-rc.1",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ngui/map": "^0.20.0",
+    "@types/googlemaps": "^3.30.0",
+    "angular2-virtual-scroll": "^0.3.1",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "hyperlist": "^1.0.0-beta",
     "rxjs": "^5.5.2",
+    "snazzy-info-window": "^1.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -45,5 +54,8 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.5.3.",
+  "main": "karma.conf.js",
+  "author": ""
 }
